--- a/st01.Html/ht01.html/ht04-01-ex1.html
+++ b/st01.Html/ht01.html/ht04-01-ex1.html
@@ -17,8 +17,40 @@
             margin:10px;  /* 표 설명글 주변 여백 */
             font-weight:bold;  /* 표 설명글 글자 굵게 */
         }
+        
     </style>
 </head>
 <body>
+    <table>
+        <caption>주요 SNS 서비스별 이용률(%)</caption>
+        <thead>
+            <tr>
+                <td></td>
+                <td><b><center>페이스북</center></b></td>
+                <td><b><center>카카오스토리</center></b></td>
+                <td><b><center>밴드</center></b></td>
+                <td><b><center>인스타그램</center></b></td>
+                <td><b><center>트위터</center></b></td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><center><b>2015년</b></center></td>
+                <td>77.1</td>
+                <td>58.3</td>
+                <td>32.4</td>
+                <td>16.7</td>
+                <td>22.1</td>
+            </tr>
+            <tr>
+                <td><center><b>2016년</b></center></td>
+                <td>73.8</td>
+                <td>51.0</td>
+                <td>40.1</td>
+                <td>28.1</td>
+                <td>14.7</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
