--- a/st01.Html/ht01.html/ht02-01.텍스트태그.html
+++ b/st01.Html/ht01.html/ht02-01.텍스트태그.html
@@ -27,33 +27,51 @@
 
     <!-- h 태그 : h1, h2, h3, h4, h5, h6 -->
     <!-- h1 태그는 페이지에서 한번만 사용 가능 -->
-
+<h1>header 1</h1>
+<h2>header 2</h2>
+<h3>header 3</h3>
+<h4>header 4</h4>
+<h5>header 5</h5>
+<h6>header 6</h6>
     <!-- p 태그: 단락 구분 태그 -->
-
+<p>단락 구분 태그</p>
     <!-- br 태그: 줄바꿈 태그 -->
+<h2>br태그</h2>
+    <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
     <!-- hr 태그: 수평줄 태그 -->
-
+<h2>hr 태그</h2>
+<hr>
     <!-- 
         strong 태그 : 텍스트 강조. 굵게 표시. 
         p 태그와 함께 사용.
     -->
-
+<h2>strong 태그</h2>
+<p><strong>strong</strong>strong</p>
 
     <!-- 
         b 태그 : 텍스트 강조. 굵게 표시.
         p 태그와 함께 사용.  
     -->
-
-
+<h2>b 태그</h2>
+<p><b>b</b>b</p>
     <!-- 
         i 태그 : 기운 글자 만들기 
         p 태그와 함께 사용.
     -->
-
-
+<h2>i 태그</h2>
+<p><i>i</i>i</p>
     <!-- pre 태그 : 그대로 출력  -->
-
+<pre>NOTE_특수문자 표기 html 페이지에서는 다음과 같은 특수문자를 사용하여 공백, 부등호 등을 화면에 표시할 수 있음
+        출력 문자 특수문자 공백 &nbsp; < &lt; > &gt; & &amp;</pre>
     <!-- xmp 태그 : 그대로 출력. html5에서 태그 제거됨 -->
+<xmp>NOTE_특수문자 표기 html 페이지에서는 다음과 같은 특수문자를 사용하여 공백, 부등호 등을 화면에 표시할 수 있음
+        출력 문자 특수문자 공백 &nbsp; < &lt; > &gt; & &amp;</xmp>
 </body>
 </html>
