--- a/st01.Html/ht01.html/ht03-01.목록태그.html
+++ b/st01.Html/ht01.html/ht03-01.목록태그.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
 <body>
 
     <pre>
@@ -14,20 +16,119 @@
     </pre>
 
     <h2>기호 목록 태그 : ul</h2>
-        <!-- 기호 : disc -->
-        <!-- 기호 : square -->
-        <!-- 기호 : circle -->
+    <ul type="circle">
+        <li>사과</li>
+        <li>바나나</li>
+        <li>오렌지</li>
+    </ul>
+
+    <!-- 기호 : disc -->
+    <ul type="disc">
+        <li>사과</li>
+        <li>바나나</li>
+        <li>오렌지</li>
+    </ul>
+    <!-- 기호 : square -->
+    <ul type="square">
+        <li>사과</li>
+        <li>바나나</li>
+        <li>오렌지</li>
+    </ul>
+    <!-- 기호 : circle -->
+    <ul type="circle">
+        <li>사과</li>
+        <li>바나나</li>
+        <li>오렌지</li>
+    </ul>
 
     <h2>번호 목록 태그 : ol</h2>
-
+    <ol>
+        <li>사과 </li>
+        <li>바나나</li>
+        <li>오렌지</li>
+    </ol>
     <h2>정의 목록: dl</h2>
+    <dl>
+        <dt>과일</dt>
+        <dd>사과</dd>
+        <dd>바나나</dd>
+        <dd>오렌지</dd>
+    </dl>
 
     <h2>번호 목록 태그 + 정의 목록의 결합</h2>
+    <ol type="a">
+        <li>사과</li>
+        <li>바나나</li>
+        <li>오렌지</li>
+    </ol>
+    <ol type="i">
+        <li>사과</li>
+        <li>바나나</li>
+        <li>오렌지</li>
+        <li>파인애플</li>
+        <li>복숭아</li>
+        <li>딸기</li>
+        <li>배</li>
+        <li>감</li>
+        <li>망고</li>
+        <li>구아바</li>
+        <li>메론</li>
+    </ol>
+    <ol type="I">
+        <li>사과</li>
+        <li>바나나</li>
+        <li>오렌지</li>
+    </ol>
 
-    
     <h2>정의 목록의 결합 + 번호 목록 태그</h2>
+    <ol>
+        <li>채소</li>
+        <li>고기</li>
+        <li>과일
+            <dl>
+                <dt>목록</dt>
+                <dd>사과</dd>
+                <dd>바나나</dd>
+                <dd>오렌지</dd>
+            </dl>
+        </li>
+    </ol>
 
-    <h2>기호 목록(ul) 태그  + 기호(ul) 목록 태그 결합</h2>
+    <dl>
+        <dt>목록</dt>
+        <dd>채소</dd>
+        <dd>고기</dd>
+        <dd>과일
+            <ol>
+                <li>사과</li>
+                <li>바나나</li>
+                <li>오렌지</li>
+            </ol>
+        </dd>
+    </dl>
+    <h2>기호 목록(ul) 태그 + 기호(ul) 목록 태그 결합</h2>
+    <ul>
+        <li>회사소개
+            <ul type="none">
+                <li>인사말</li>
+                <li>오시는길</li>
+            </ul>
+        </li>
+        <li>사업분야
+            <ul>
+                <li>디자인</li>
+                <li>개발</li>
+            </ul>
+        </li>
+        <li>BBS
+            <ul>
+                <li>공지사항</li>
+                <li>QnA</li>
+            </ul>
+        </li>
+    </ul>
+
+
     <!-- 
         ul을 사용하여 아래 구조의 메뉴를 만들어 보자.
 
@@ -42,4 +143,5 @@
             QnA
     -->
 </body>
+
 </html>
