--- a/st01.Html/ht01.html/ht04-01-ex2.html
+++ b/st01.Html/ht01.html/ht04-01-ex2.html
@@ -20,5 +20,16 @@
     </style>
 </head>
 <body>
+    <table>
+        <tr>
+            <td colspan="2">지역별 홍차</td>
+        </tr>
+        <tr rowspan="3">
+            <td>중국</td>
+            <td>정산소종</td>
+            <td>기문</td>
+            <td>운남</td>
+        </tr>
+    </table>
 </body>
 </html>
