--- a/st01.Html/ht01.html/ht05-01-ex1.html
+++ b/st01.Html/ht01.html/ht05-01-ex1.html
@@ -5,9 +5,11 @@
     <title>이미지 삽입하기</title>
 </head>
 <body>
-	<h2>이미지 삽입하기</h2>
+    <h2>이미지 삽입하기</h2>
+    <img src="../images/umbrella.jpg" alt="umbrella.jpg" width="320" height="210">
 
 
     <h2>Daum 로고 이미지 삽입하기</h2>
+    <img src="https://t1.daumcdn.net/daumtop_deco/images/top/2017/logo_foot.gif" alt="">
 </body>
 </html>
