--- a/st01.Html/ht01.html/ht04-01-ex2.html
+++ b/st01.Html/ht01.html/ht04-01-ex2.html
@@ -6,7 +6,7 @@
     <style>
         table, th, td {
             border:1px solid gray;  /* 표의 테두리 - 1px 회색 실선 */
-            border-collapse:collapse;  /* 표 테두리와 셀 테두리 합치기 */
+            border-collapse:separate;  /* 표 테두리와 셀 테두리 합치기 */
         }
         th, td {
             width:150px;  /* 셀 너비 */
@@ -22,13 +22,30 @@
 <body>
     <table>
         <tr>
-            <td colspan="2">지역별 홍차</td>
+            <td colspan="2"><center><strong>지역별 홍차</strong></center></td>
         </tr>
-        <tr rowspan="3">
-            <td>중국</td>
+        <tr>
+            <td rowspan="3"><center><strong>중국</strong></center></td>
             <td>정산소종</td>
+        </tr>
+        <tr>
             <td>기문</td>
+        </tr>
+        <tr>
             <td>운남</td>
+        </tr>
+        <tr>
+            <td rowspan="4"><center><strong>인도 및 스리랑카</strong></center></td>
+            <td>아삼</td>
+        </tr>
+        <tr>
+            <td>실론</td>
+        </tr>
+        <tr>
+            <td>다질링</td>
+        </tr>
+        <tr>
+            <td>닐기리</td>
         </tr>
     </table>
 </body>
