--- a/st01.Html/ht01.html/ht08-02.input태그.html
+++ b/st01.Html/ht01.html/ht08-02.input태그.html
@@ -8,12 +8,18 @@
     </style>
 </head>
 <body>
-    <form action="" method="" enctype="">
-        <!-- »ç¿ëÀÚ°¡ ÀÔ·ÂÇÏ´Â ÀÔ·Â ¾ç½Ä -->
+    <form action="https://www.naver.com/" method="get">
+        <input type="text" name="query" value="abc">
+        <input type="password" name="pw" value="123">
+        <input type="submit" value="ì „ì†¡">
+        <input type="image" src="../images/1.jpg" alt="">
 
-        <!-- È­¸é¿¡ Ç¥½Ã µÇÁö ¾ÊÀ½ -->
+        <input type="hidden" name="hidden" value="hidden">
 
-        <!-- ¹öÆ° -->
+        <input type="submit" value="ì „ì†¡">
+        <input type="button" value="ë²„íŠ¼">
+        <input type="reset" value="ë¦¬ì…‹">
+        <input type="image" src="https://t1.daumcdn.net/daumtop_chanel/op/20170315064553027.png" alt="">
     </form>
 </body>
 </html>
