--- a/st01.Html/ht01.html/ht08-03.입력태그실습1.html
+++ b/st01.Html/ht01.html/ht08-03.입력태그실습1.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style type="text/css">
+    <style>
+        label {width: 100px;display: inline-block}
     </style>
 </head>
+
 <body>
     <!-- fieldset & legend -->
     <!-- form 태그 필요 속성 3가지 추가. -->
     <form action="" method="" enctype="">
+        <fieldset>
+            <legend> &nbsp;입력 양식&nbsp; </legend>
+            <div>
+                <label for="name1">이름:</label>
+                <input type="text" name="name1" id="name1">
+            </div>
+            <div>
+                <label for="email1">이메일:</label>
+                <input type="email" name="email1" id="email1">
+            </div>
+            <div>
+                <input type="submit" value="쿼리전송">
+            </div>
+        </fieldset>
     </form>
 
 </body>
+
 </html>
