--- a/st01.Html/ht01.html/ht08-03.입력태그실습2.html
+++ b/st01.Html/ht01.html/ht08-03.입력태그실습2.html
@@ -1,35 +1,118 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style type="text/css">
+    <style>
+        label{width: 120px;display: inline-block}
     </style>
 </head>
+
 <body>
     <!-- form 태그 필요 속성 3가지 추가. -->
     <form action="" method="" enctype="">
 
         <!-- 로그인 -->
         <fieldset>
+            <legend>로그인</legend>
+            <div>
+                <label for="name1">아이디:</label>
+                <input type="text" name="name1" id="name1" value="tyt7yu8">
+            </div>
+            <div>
+                <label for="pw1">패스워드:</label>
+                <input type="password" name="pw1" id="pw1" value="123">
+            </div>
         </fieldset>
 
         <!-- 회원가입 -->
         <fieldset>
+            <legend>회원 가입</legend>
+            <div>
+                <label for="name2">아이디:</label>
+                <input type="text" name="name2" id="name2">
+            </div>
+            <div>
+                <label for="pw2">패스워드:</label>
+                <input type="password" name="pw2" id="pw2">
+            </div>
+            <div>
+                <label for="pw3">패스워드 확인:</label>
+                <input type="password" name="pw3" id="pw3">
+            </div>
+            <div>
+                <label for="name3">이름:</label>
+                <input type="text" name="name3" id="name3" value="이름을 입력하세요">
+            </div>
+            <div>
+                <label for="email1">이메일:</label>
+                <input type="email" name="email1" id="email1">
+            </div>
+            <div>
+                <label for="tel1">전화번호:</label>
+                <input type="tel" name="tel1" id="tel1">
+            </div>
+            <div>
+                <label for="date1">생년월일:</label>
+                <input type="date" name="date1" id="date1">
+            </div>
         </fieldset>
 
         <!-- 수강신청 -->
         <fieldset>
+            <legend>수강 신청</legend>
+            <div>
+                <label for="e1">영어 초급:</label>
+                <input type="radio" name="radio1" id="e1" checked>
+            </div>
+            <div>
+                <label for="e2">영어 중급:</label>
+                <input type="radio" name="radio1" id="e2">
+            </div>
+            <div>
+                <label for="e3">영어 고급:</label>
+                <input type="radio" name="radio1" id="e3">
+            </div>
+            <br>
+            <div>
+                <label for="e4">영어 초급:</label>
+                <input type="checkbox" name="checkbox1" id="e4">
+            </div>
+            <div>
+                <label for="e5">영어 중급:</label>
+                <input type="checkbox" name="checkbox2" id="e5" checked>
+            </div>
+            <div>
+                <label for="e6">영어 고급:</label>
+                <input type="checkbox" name="checkbox3" id="e6">
+            </div>
         </fieldset>
 
         <!-- selec박스 -->
         <fieldset>
+            <select name="" id="">
+                <optgroup label="공과대학">
+                    <option value="">건축과</option>
+                    <option value="">토목과</option>
+                </optgroup>
+                <optgroup label="자연과학대학">
+                    <option value="" selected>수학과</option>
+                    <option value="">생물학과</option>
+                </optgroup>
+            </select>
         </fieldset>
 
         <!-- 전송 버튼 : form 을 완료 -->
         <!-- 초기화 버튼 :  form 입력 값을 초기화  -->
-
+        <div>
+            <center>
+                <input type="submit" value="전송">
+                <input type="reset" value="초기화">
+            </center>
+        </div>
     </form>
 
 </body>
+
 </html>
