--- a/st01.Html/ht01.html/ht09-01-ex1.html
+++ b/st01.Html/ht01.html/ht09-01-ex1.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>SUMMER BEACH</h1>
+    <video src="../media/Beach.mp4" controls autoplay loop style="width:400px; height: 220px;"></video>
 </body>
 </html>
