--- a/st01.Html/ht01.html/ht09-01.viedo.html
+++ b/st01.Html/ht01.html/ht09-01.viedo.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <h2>해변 동영상</h2>
-
+    <video src="../media/Beach.mp4" controls autoplay loop style="width:400px;"></video>
     <h2>페인팅 동영상</h2>
+    <video src="../media/Painting.mp4" controls></video>
 </body>
 </html>
