--- a/st01.Html/ht01.html/ht09-02.audio.html
+++ b/st01.Html/ht01.html/ht09-02.audio.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h2>bgsound.mp3 오디오 플레이하기</h2>
+    <audio src="../media/bgsound.mp3" autoplay controls loop muted></audio>
 </body>
 </html
 
