--- a/st01.Html/ht01.html/ht10-01-ex1.html
+++ b/st01.Html/ht01.html/ht10-01-ex1.html
@@ -17,5 +17,25 @@
     </style>
 </head>
 <body>
+    <header>
+        header
+    </header>
+    <nav>
+        nav
+    </nav>
+    <div style="text-align: center;">
+            <aside>aside</aside>
+        <div id="bodyleft">
+                <section>
+                        section
+                    </section>
+                    <article>
+                        article
+                    </article>
+        </div>
+                  
+        
+    </div>
+    <footer>footer</footer>
 </body>
 </html>
