--- a/st01.Html/ht01.html/ht10-02-ex2.html
+++ b/st01.Html/ht01.html/ht10-02-ex2.html
@@ -4,9 +4,32 @@
     <meta charset="utf-8">
     <title></title>
     <style>
+        *{background-color: gray; padding: 10px;}
+        header{background-color: #78d0d1; margin: 10px; }
+        nav{background-color: #e9e661; width: 30%; height: 300px; float: left; display: inline-block; text-align: center;}
+        article{background-color: #95db5e; width: 30%; height: 300px; display: inline-block; text-align: center; vertical-align: middle; margin: 0 auto;}
+        aside{background-color: #efb14e; width: 30%; height: 300px; float: right; display: inline-block; text-align: center;}
+        footer{background-color: #78d0d1; clear:both; margin: 10px; }
+        .g1{background-color: #c885b1; margin: 10px; }
+        .g2{background-color: #fe5514; margin: 10px; }
+        #m0{text-align: center;}
+        #p1{display: flex; align-items: center; flex-direction: column;}
     </style>
 </head>
-<body>
-
+<body> 
+<header>&lt;header&gt;</header>
+<div id="m0">
+        <nav>&lt;nav&gt;</nav>
+        <aside>&lt;aside&gt;
+            <section class="g2">&lt;section&gt;</section>
+            <section class="g2">&lt;section&gt;</section>
+            <section class="g2">&lt;section&gt;</section>
+        </aside>
+        <article>&lt;article&gt;
+                <section class="g1">&lt;section&gt;</section>
+                <section class="g1">&lt;section&gt;</section>
+        </article>
+</div>    
+<footer>&lt;footer&gt;</footer>
 </body>
 <html>
