--- a/st01.Html/ht01.html/ht10-03.입양하기.html
+++ b/st01.Html/ht01.html/ht10-03.입양하기.html
@@ -4,31 +4,46 @@
     <meta charset="utf-8">
     <title>내가 처음 만드는 HTML 문서</title>
     <style>
+        header{background-color: coral; height: 80px;}
+        nav{}
+        section{border:1px solid darkgray; margin: 10px; width: 400px;}
+        footer{background-color: black; text-align: center; height: 60px; vertical-align: middle; color: white;}
+        .ul{list-style: none;}
+        .ib{display: inline-block; margin: 20px;}
+        .lh{line-height: 20px;}
+        .v1{vertical-align: middle;}
     </style>
 </head>
 <body>
-        <h1>입양하기</h1>
-
-        <ul>
-            <li><a href="#">애완견 종류</a></li>
-            <li><a href="#">입양하기</a></li>
-            <li><a href="#">건강돌보기</a></li>
-            <li><a href="#">더불어살기</a></li>
-        </ul>
-
-            <h2>강아지 용품 준비하기</h2>
-            <ul>
-                <li>강아지 집 </li>
-                <li>강아지 먹이 </li>
-                <li>밥그릇, 물병 </li>
-                <li>이름표, 목줄</li>
-                <li>장난감, 개껌</li>
-                <li>애견용 간식</li>
-                <li>브러쉬, 빗, 털 제거 롤</li>
-                <li>귀 세정액, 구강스프레이, 기타 영양제 </li>
-                <li>샴푸, 린스, 애견용 타올 </li>
-            </ul>
-
-        <p>Copyright 2012 funnycom</p>
+    <header>
+            <h1>입양하기</h1>
+    </header>
+    <div>
+            <nav>
+                    <ul class="u1">
+                            <li class="ib"><a href="#">애완견 종류</a></li>
+                            <li class="ib"><a href="#">입양하기</a></li>
+                            <li class="ib"><a href="#">건강돌보기</a></li>
+                            <li class="ib"><a href="#">더불어살기</a></li>
+                        </ul>        
+            </nav>
+            <section>
+                    <h2>강아지 용품 준비하기</h2>
+                    <ul>
+                        <li>강아지 집 </li>
+                        <li>강아지 먹이 </li>
+                        <li>밥그릇, 물병 </li>
+                        <li>이름표, 목줄</li>
+                        <li>장난감, 개껌</li>
+                        <li>애견용 간식</li>
+                        <li>브러쉬, 빗, 털 제거 롤</li>
+                        <li>귀 세정액, 구강스프레이, 기타 영양제 </li>
+                        <li>샴푸, 린스, 애견용 타올 </li>
+                    </ul>
+            </section>
+    </div>
+    <footer>
+            <p class="ib">Copyright 2012 funnycom</p>
+    </footer>
 </body>
 </html>
