--- a/st02.CSS/cs02.CSS선택자/cs02-01.기본선택자.html
+++ b/st02.CSS/cs02.CSS선택자/cs02-01.기본선택자.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS3 Selector Basic Page</title>
+    <style>
+        h1{color: red;}
+        p{color: blue;}
+        li{color: green;}
+        li.select{color: red;}
+        .class{color: yellow;}
+        #header{color: red; background-color: red;}
+        #header2{background-color: red;}
+        #aside{background-color:rgb(72, 181, 224); }
+        #content{background-color: green;}
+        #wrap{}
+    
+    </style>
 </head>
 <body>
     <h1>제목 글자</h1>
@@ -23,4 +36,4 @@
         <li>감</li>
     </ul>
 </body>
-</html>
+</html>
