--- a/st02.CSS/cs02.CSS선택자/cs02-03.속성선택자.html
+++ b/st02.CSS/cs02.CSS선택자/cs02-03.속성선택자.html
@@ -2,6 +2,14 @@
 <html>
 <head>
     <title>CSS3 Selector Basic Page</title>
+    <style>
+        input{background-color: yellow;}
+        input[type] {background-color: red;}
+        input[type="text"] {background-color: red;}
+        input[name="password"] {background-color: blue;}
+        input[disabled] {background-color: gray;}
+    
+    </style>
 </head>
 <body>
     <input type="text" />
@@ -12,5 +20,6 @@
     <input />
     <h2>사용 불가능</h2>
     <input disabled />
+    <p type="text" name="password" value="findme">abc</p>
 </body>
-</html>
+</html>
