--- a/st02.CSS/cs03.폰트와텍스트/cs03-04.market.html
+++ b/st02.CSS/cs03.폰트와텍스트/cs03-04.market.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="utf-8">
     <title>market</title>
+    <style>
+        *{text-align: center; line-height: 200%;}
+        #container{border: 1px solid darkgray; width: 640px; margin: auto;}
+        h1{background-color: black; color: white; text-align: left; margin-top: 0px;  font-size: 15px; padding: 10px;}
+        h2{color: red;}
+        p{font-size: 20px;}
+        span.accent{color:blue;}
+        div#check{font-weight: bold;}
+        span.smalltext{font-weight: normal;}
+    </style>
 </head>
 
 <body>
@@ -30,4 +40,4 @@
     </div>
 </div>
 </body>
-</html>
+</html>
