--- a/st02.CSS/cs03.폰트와텍스트/cs03-06.quiz2.html
+++ b/st02.CSS/cs03.폰트와텍스트/cs03-06.quiz2.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>텍스트 스타일</title>
+    <style>
+        div.container{line-height: 200%;}
+        ul{list-style: none;}
+        span.subject{font-weight: 700; color: #ad3000;}
+    </style>
 </head>
 <body>
     <div class="container">
@@ -21,4 +26,4 @@
         </ul>
     </div>
 </body>
-</html>
+</html>
