--- a/st02.CSS/cs03.폰트와텍스트/cs03-09.text-overflow.html
+++ b/st02.CSS/cs03.폰트와텍스트/cs03-09.text-overflow.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <title>text-overflow</title>
+    <style>
+        .a{width: 100px; border: 2px solid #00ff00; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+        .a:hover{overflow:visible; width:360px;}
+    </style>
 </head>
 <body>
     <h1>The text-overflow</h1>
