--- a/st02.CSS/cs02.CSS선택자/cs02-07-ex1.상태선택자.html
+++ b/st02.CSS/cs02.CSS선택자/cs02-07-ex1.상태선택자.html
@@ -2,6 +2,12 @@
 <html lang="ko">
 <head>
     <title>상태선택자</title>
+    <style>
+    table tr:nth-child(3n+0){background-color: red;}
+    table tr:nth-child(3n+1){background-color: blue;}
+    table tr:nth-child(3n+2){background-color: orange;}
+    </style>
+    
 </head>
 <body>
     <table>
@@ -14,4 +20,4 @@
         <tr><td>일곱 번째</td></tr>
     </table>
 </body>
-</html>
+</html>
