--- a/st02.CSS/cs03.폰트와텍스트/cs03-01.font속성.html
+++ b/st02.CSS/cs03.폰트와텍스트/cs03-01.font속성.html
@@ -3,6 +3,25 @@
 <head>
     <meta charset="utf-8">
     <title>폰트 CSS 속성</title>
+    <style>
+        #font1 {font-family: serif;}
+        #font2 {font-family: "나눔고딕코딩";}
+        @import url('https://fonts.googleapis.com/css?family=Nanum+Brush+Script');
+        #font3 {font-family: 'Nanum Brush Script', cursive;}
+        /*@import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css');
+        #font3 {font-family: 'Nanum Gothic', serif;}*/
+        @font-face{font-family: "NanumBarunGothicWebBold"; font-style: "bold"; font-weight: 700; src:url(./NanumBarunGothicWebBold.woff)}
+        #font4 {font-family: "NanumBarunGothicWebBold"}
+        @font-face{font-family: "NanumBarunGothicWebBold"; font-style: "bold"; font-weight: 700; src:url(http://cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebBold.woff)}
+        #font5 {font-family: "NanumBarunGothicWebBold"}
+        /* font-size. 단위 px % em */
+        p.size1{font-size: 20px;}
+        p.size2{font-size: 50%;}
+        p.size3{font-size: 1.5em;}
+        p.no1{font-style:normal; }
+        p.no2{font-style:italic; }
+        p.no3{font-style:oblique; }
+    </style>
 </head>
 <body>
     <pre>
