--- a/st02.CSS/cs03.폰트와텍스트/cs03-02.text속성.html
+++ b/st02.CSS/cs03.폰트와텍스트/cs03-02.text속성.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="utf-8">
     <title>무제 문서</title>
+    <style>
+        p.color_hexa{color: #09fa04}
+        p.color_rgba{color: rgba(233,255,12,0.5)}
+        p.color_name{color: lightblue}
+        p.color_hsla{color: hsla(244,23,34,0.5)}
+        p.align_left{text-align: left;}
+        p.align_center{text-align: center;}
+        p.align_right{text-align: right;}
+        p.align_justify{text-align: justify;}
+        p.direction1{direction: ltr;}
+        p.direction2{direction: rtl;}
+        p.decoration1{text-decoration: none;}
+        p.decoration2{text-decoration: red underline;}
+        p.decoration3{text-decoration: green overline;}
+        p.decoration4{text-decoration: blue line-through;}
+    </style>
 </head>
 <body>
     <h2> color 속성 </h2>
@@ -41,4 +57,4 @@
 
 </body>
 </html>
-
+
