--- a/st02.CSS/cs03.폰트와텍스트/cs03-05.quiz1.html
+++ b/st02.CSS/cs03.폰트와텍스트/cs03-05.quiz1.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>텍스트 스타일</title>
+    <style>
+        span.subject{font-weight:700;}
+        .container{border: 20px solid black;}
+    </style>
 </head>
 <body>
 <div class="container">
@@ -27,4 +31,4 @@
     </p>
 </div>
 </body>
-</html>
+</html>
