--- a/st02.CSS/cs03.폰트와텍스트/cs03-07.quiz3.html
+++ b/st02.CSS/cs03.폰트와텍스트/cs03-07.quiz3.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="utf-8">
     <title>텍스트 스타일</title>
+    <style>
+        *{font-family: "맑은 고딕"}
+        h1{font-size: 17px;}
+        p{font-size: 16px; line-height: 25px;}
+        span.accent{font-weight: bold; color: red;}
+        .container{border: solid darkgray; display: inline-block; display: flex;}
+        .book-img{width: 220px;}
+        .book-desc{width: calc(100% - 220px);}
+    </style>
 </head>
 <body>
     <div class="container">
@@ -23,4 +32,4 @@
         </div>
     </div>
 </body>
-</html>
+</html>
