--- a/st02.CSS/ex01.blog/blog.html
+++ b/st02.CSS/ex01.blog/blog.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="utf-8">
     <title>HTML5 Basic Page</title>
+    <style>
+        div#page-wrapper{border: 10px solid darkgrey;}
+        header#main-header{line-height: 75%; margin: 10px;}
+        .master-description{font-weight: normal; font-size: 16px;}
+        
+        .outer-menu > .outer-menu-item{width: 90px; list-style: none; display: inline-block; vertical-align: top;}
+        #main-navigation{border: 3px solid darkgrey; width: 97%;}
+        div.search-bar{float: right;}
+        .input-search-submit{margin-left: -7px; border-top-right-radius: 10px; border-bottom-right-radius: 10px;}
+        .input-search{border-top-left-radius: 10px; border-bottom-left-radius: 10px;}
+        .search-bar{vertical-align: top;}
+
+    </style>
 </head>
 <body>
     <div id="page-wrapper">
@@ -98,7 +111,8 @@
         </footer>
     </div>
 </body>
-</html>
+</html>
+
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>
