--- a/st02.CSS/cs04.색상과배경/cs04-09.lounge.html
+++ b/st02.CSS/cs04.색상과배경/cs04-09.lounge.html
@@ -3,6 +3,40 @@
   <head>
     <meta charset="utf-8">
     <title>Head First Lounge</title>
+    <style>
+      #fire{
+        width: calc(100% - 260px);
+      }
+      #elixirs{
+        border: 3px solid seagreen;
+        float: right;
+        width: 250px;
+        text-align: center;
+        }
+      #elixirs > h2{
+        color: black;
+        background-image: url(./images/cocktail.gif);
+        background-repeat: repeat-x;
+        background-size: 35%;
+        padding: 10px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        }
+      #elixirs > h3{color: palevioletred;}
+      #elixirs > p{margin-left: 14px; margin-right: 14px;}
+      #guarantee{
+        background-image: url(./images/background.gif);
+        background-repeat: no-repeat;
+        background-size: 100px;
+        background-color: seagreen;
+        padding: 20px;
+        padding-left: 90px;
+        margin-left: 80px;
+      }
+      h1,h2,a{color: seagreen;}
+      .artist{font-weight: bold;}
+      #footer{text-align: center;}
+    </style>
   </head>
   <body>
     <p><img src="images/logo.gif" alt="Head First Lounge"></p>
@@ -47,7 +81,7 @@
            title="Head First Lounge Elixirs">elixirs</a>.
       </p>
     </div>
-
+    <div id="fire">
     <h1>Welcome to the Head First Lounge</h1>
     <p>
       The Head First Lounge is, no doubt, the biggest trendsetter in Webville. 
@@ -116,5 +150,6 @@
         the property of their respective owners.
       </p>
     </div>
+    </div>
   </body>
-</html>
+</html>
