--- a/st02.CSS/cs05.테두리/cs05-04-ex1.빨간테두리원.html
+++ b/st02.CSS/cs05.테두리/cs05-04-ex1.빨간테두리원.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="utf-8">
     <title>border radius</title>
+    <style>
+        div{
+            border: 5px solid red;
+            width: 400px;
+            height: 400px;
+            margin: 10px;
+            background-color: yellow;
+            border-radius: 200px;
+        }
+    </style>
 </head>
 <body>
     <div></div>
