--- a/st02.CSS/cs04.색상과배경/cs04-03.quiz.html
+++ b/st02.CSS/cs04.색상과배경/cs04-03.quiz.html
@@ -2,7 +2,42 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8">
-    <title>배경 스타일</title>
+	<title>배경 스타일</title>
+	<style>
+		h1{
+			font-family: '맑은 고딕';
+			font-size: 20px;
+			text-align: center;}
+		.container{
+			background-image: url(../images/apple-bg.jpg);
+			background-repeat: no-repeat;
+			background-size: cover;
+			width: 640px;
+			height: 400px;
+			border: 1px solid #000000;
+		}
+		.content{
+			width: 80%;
+			height: 60px;
+			background-color: rgba(255, 255, 255, 0.5);
+
+			/* 텍스트의 수직 middle 정렬 */
+			line-height: 65px;
+
+			/* 태그의 수평 center 정렬 */
+			margin: 0 auto;
+
+			/* 태그의 위치 지정 방법 1. */
+			margin-top: 300px;
+
+			/* 태그의 위치 지정 방법 2. */
+			/*
+			position: relative;
+			left: 20px;
+			top: 300px;
+			*/
+			}
+	</style>
 </head>
 <body>
 	<!-- background-image를 이용하여 배경 이미지 추가 -->
@@ -12,4 +47,4 @@
 	    </div>
 	</div>
 </body>
-</html>
+</html>
