--- a/st02.CSS/cs05.테두리/cs05-02.다양한사각형.html
+++ b/st02.CSS/cs05.테두리/cs05-02.다양한사각형.html
@@ -3,6 +3,59 @@
 <head>
     <meta charset="utf-8">
     <title>박스모델</title>
+    <style>
+        #borderstyle > div{
+            width: 200px;
+            height: 150px;
+            margin: 10px;
+            float: left;}
+        #borderstyle::after{clear: both; display: block; content: '';}
+        #borderstyle > div.box1{border: 10px solid black;}
+        #borderstyle > div.box2{border: 10px dotted black;}
+        #borderstyle > div.box3{border: 10px dashed black;}
+        #borderstyle > div.box4{
+            border-top: 10px solid black;
+            border-right: 10px dotted black;
+            border-bottom: 10px dashed black;
+            border-left: 10px double black;}
+        #bordercolor > div{
+            width: 200px;
+            height: 150px;
+            margin: 10px;
+            float: left;}
+        #bordercolor::after{clear: both; display: block; content: '';}
+        #bordercolor > div.box1{border: 10px dotted red;}
+        #bordercolor > div.box2{border: 10px dotted blue;}
+        #bordercolor > div.box3{
+            border-top: 10px dotted red;
+            border-right: 10px dotted blue;
+            border-bottom: 10px dotted red;
+            border-left: 10px dotted blue;}
+        #bordercolor > div.box4{
+            border-top: 10px dotted black;
+            border-right: 10px dotted red;
+            border-bottom: 10px dotted blue;
+            border-left: 10px dotted yellow;}
+        #borderwidth > div{
+            width: 200px;
+            height: 150px;
+            margin: 10px;
+            float: left;}
+        #borderwidth::after{clear: both; display: block; content: '';}
+        #borderwidth > div.box1{border: 10px solid black;}
+        #borderwidth > div.box2{border: 20px solid black;}
+        #borderwidth > div.box3{border: 20px solid black;}
+        #borderwidth > div.box4{
+            border-top: 20px solid black;
+            border-right: 30px solid black;
+            border-bottom: 40px solid black;
+            border-left: 50px solid black;}
+        #borderwidth > div.box5{
+            border-top: 20px solid black;
+            border-right: 40px solid black;
+            border-bottom: 60px solid black;
+            border-left: 80px solid black;}
+    </style>
 </head>
 <body>
     <div id="borderstyle">
@@ -11,7 +64,7 @@
         <div class="box2"> dotted </div>
         <div class="box3"> dashed </div>
         <div class="box4"> 4면에 다른 border style 적용.</div>
-    </div>
+    </div> <!-- clear -->
 
     <div id="bordercolor">
         <h2>border color</h2>
@@ -31,4 +84,4 @@
     </div>
 
 </body>
-</html>
+</html>
