--- a/st02.CSS/cs05.테두리/cs05-03-ex1.html
+++ b/st02.CSS/cs05.테두리/cs05-03-ex1.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>border radius</title>
+    <style>
+        img,div{
+            border: 3px solid red;
+            border-radius: 20px;
+            float: left;
+            margin: 10px;}
+    </style>
 </head>
 <body>
         <h2>border radius</h2>
@@ -11,4 +18,4 @@
         <div id="bg" style="width:250px;height:268px; background-image: url(../images/pic3.jpg);">
         </div>
 </body>
-</html>
+</html>
