--- a/st02.CSS/cs05.테두리/cs05-06-ex2.애완견.html
+++ b/st02.CSS/cs05.테두리/cs05-06-ex2.애완견.html
@@ -3,6 +3,39 @@
 <head>
     <meta charset="utf-8">
     <title>애완견 돌보기</title>
+    <style>
+      header{
+        background-color: blue;
+        color: white;}
+      nav{
+        float: right;}
+      h1{
+        display: inline-block;}
+      nav > ul{
+        list-style-type: none;
+        list-style-position: none;
+        list-style-image: none;
+        display: flex;
+        margin: 0px;}
+      a{
+        color: white;
+        margin: 10px;
+        float: right;
+        text-decoration: none;}
+      article{
+        margin-top: 20px;}
+      #pet1{
+        border: 3px solid darkgray;
+        border-radius: 10px;}
+      dt{
+        color: plum;}
+      #pet2{
+        border: 3px solid powderblue;
+        border-radius: 10px;}
+      #pet3{
+        border: 3px solid greenyellow;
+        border-radius: 20px 0px;}
+    </style>
 </head>
 <body>
     <header>
@@ -57,4 +90,4 @@
         <p>Copyright 2012 funnycom</p>
     </footer>
 </body>
-</html>
+</html>
