--- a/st02.CSS/cs06.박스모델/cs06-03-ex1.html
+++ b/st02.CSS/cs06.박스모델/cs06-03-ex1.html
@@ -3,6 +3,38 @@
 <head>
     <meta charset="utf-8">
     <title>display 속성</title>
+    <style>
+        div#container{
+            border: 2px solid darkgray;
+            width: 450px;
+            height: 300px;}
+        div{
+            display: inline-block;}
+        /* 1. float: left; */
+        /* 2. display: inline-block; */
+        /* 3. display: flex; */
+        div.ex1{
+            border: 2px solid black;
+            width: 100px;
+            height: 100px;
+            margin: 10px 5px;
+            padding: 5px;
+            background-color: lightblue;}
+        div.ex2{
+            border: 2px solid black;
+            width: 100px;
+            height: 100px;
+            margin: 10px 5px;
+            padding: 5px;
+            background-color: lightgreen;}
+        div.ex3{
+            border: 2px solid black;
+            width: 100px;
+            height: 100px;
+            margin: 10px 5px;
+            padding: 5px;
+            background-color: lightyellow;}
+    </style>
 </head>
 <body>
     <div id="container">
@@ -11,4 +43,4 @@
         <div class="ex3">세번째</div>
     </div>
 </body>
-</html>
+</html>
