--- a/st02.CSS/cs06.박스모델/cs06-03.display.html
+++ b/st02.CSS/cs06.박스모델/cs06-03.display.html
@@ -3,6 +3,32 @@
     <head>
         <meta charset="utf-8">
         <title>display 속성</title>
+        <style>
+            #inlineblock{
+                border: 1px solid darkgray;
+                border-radius: 5px;}
+            nav > ul{
+                background-color: blue;
+                margin-bottom: 0px;
+                list-style-type: none;}
+            li{
+                display: inline-block;}
+            a{
+                color: white;
+                text-decoration: none;}
+            #inline{
+                border: 1px solid darkgray;
+                border-radius: 5px;}
+            #inling img{
+                display: inline;}
+            #block{
+                border: 1px solid darkgray;
+                border-radius: 5px;}
+            #block img{
+                display: block;}
+            img{
+                margin: 5px;}
+        </style>
     </head>
     <body>
         <h2>display 속성</h2>
@@ -29,4 +55,4 @@
             <img src="../images/pic3.jpg">
         </div>
     </body>
-</html>
+</html>
