--- a/st02.CSS/cs07.포지셔닝/cs07-01.display.html
+++ b/st02.CSS/cs07.포지셔닝/cs07-01.display.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8">
     <title>박스모델</title>
     <style type="text/css">
+    div {
+        width: 100px;
+        height: 100px;
+        margin: 10px 5px;
+        padding: 5px;
+        border: 2px solid black;
+        display: inline-block;}
+    .box1 { background: lightblue; }
+    .box2 { background: lightgreen; }
+    .box3 { background: lightyellow; }
+    .box4 { float: right; }
+    </style>
 </head>
 <body>
     <div class="box1">박스1</div>
@@ -12,4 +24,4 @@
     <div class="box4">박스4</div>
     <div class="box5">박스5</div>
 </body>
-</html>
+</html>
