--- a/st02.CSS/cs07.포지셔닝/cs07-02.float5.html
+++ b/st02.CSS/cs07.포지셔닝/cs07-02.float5.html
@@ -3,6 +3,26 @@
 <head>
     <meta charset="utf-8">
     <title>박스모델</title>
+    <style>
+        div{
+            height: 100px;
+            margin: 10px;
+            text-align: center;
+            line-height: 100px;}
+        div.box1{
+            background-color: yellow;
+            width: 100px;
+            float: left;}
+        div.box2{
+            background-color: lightblue;
+            width: 100px;
+            float: left;}
+        div.box3{
+            background-color: greenyellow;}
+        div.box4{
+            background-color: violet;
+
+    </style>
 </head>
 <body>
     <div class="box1">박스1</div>
