--- a/st02.CSS/cs07.포지셔닝/cs07-06.ex1.html
+++ b/st02.CSS/cs07.포지셔닝/cs07-06.ex1.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="utf-8">
     <title>절대 좌표 실습</title>
+    <style>
+        div.absolute{
+            position: absolute;
+            left: 250px;
+            top: 400px;}
+        h3.pos_left{
+            position: relative;
+            left: -100px;}
+        h3.pos_right{
+            position: relative;
+            left: 100px;}
+    </style>
 </head>
 
 <body>
