--- a/st02.CSS/cs08.레이아웃/cs08-13.variable_layout_A.html
+++ b/st02.CSS/cs08.레이아웃/cs08-13.variable_layout_A.html
@@ -3,6 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>레이아웃 A ::: Auto stretch content's height</title>
+    <style>
+        /* 브라우저 css 초기화 */
+        *{margin: 0; padding: 0;}
+        html, body, #wrap{height: 100%;}
+        #header{
+            height: 50px;
+            border: 1px solid red;}
+        #content{
+            height: calc(100% - 106px);
+            border: 1px solid green;}
+        #footer{
+            height: 50px;
+            border: 1px solid blue;}
+    </style>
 </head>
 <body>
     <div id="wrap">
@@ -20,4 +34,4 @@
     </div>
 </body>
 
-</html>
+</html>
