--- a/st02.CSS/cs05.테두리/cs05-05.box-shadow.html
+++ b/st02.CSS/cs05.테두리/cs05-05.box-shadow.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="utf-8">
     <title>박스모델</title>
+    <style>
+        div{
+            border-radius: 20px;
+        }
+        div.box1{box-shadow: 20px -20px 5px 0 #ff0000;}
+        div.box2{box-shadow: 20px -20px 5px 0 #ff0000 inset;}
+        div.box3{box-shadow: 20px 20px 15px 5px #ff0000;}
+        div.box4{box-shadow: 20px 20px 15px 5px #ff0000 inset;}
+        div.box5:hover{box-shadow: 20px 20px 15px 5px #ff0000;}
+    </style>
 </head>
 <body>
 
@@ -13,5 +23,16 @@
     <div class="box2"
          style="width:200px;height:100px; border:3px solid black; margin: 20px; display: inline-block;">
     </div>
+    <div class="box3"
+         style="width:200px;height:100px; border:3px solid black; margin: 20px; display: inline-block;">
+    </div>
+
+    <div class="box4"
+         style="width:200px;height:100px; border:3px solid black; margin: 20px; display: inline-block;">
+    </div>
+    
+    <div class="box5"
+         style="width:200px;height:100px; border:3px solid black; margin: 20px; display: inline-block;">
+    </div>
 </body>
-</html>
+</html>
