--- a/st02.CSS/cs06.박스모델/cs06-02.div_vs_span.html
+++ b/st02.CSS/cs06.박스모델/cs06-02.div_vs_span.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>나눔 고딕 import</title>
+    <style>
+        div{
+            border: 1px dotted red;
+            margin: 0 0 10px 0;}
+        span{
+            border: 1px dotted red;
+            margin: 0 0 10px 0;}
+    </style>
 </head>
 <body>
     <div>div의 공간 </div>
@@ -11,4 +19,4 @@
     <span> span의 공간 </span>
 </body>
 
-</html>
+</html>
