--- a/st02.CSS/cs07.포지셔닝/cs07-06.absolute_relative.html
+++ b/st02.CSS/cs07.포지셔닝/cs07-06.absolute_relative.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="utf-8">
     <title>절대 좌표 실습</title>
+    <style>
+      h2{
+        position: absolute;
+        left: 250px;
+        top: 400px;
+      }
+      h3.pos_left{
+        position: relative;
+        left: -100px;
+        top: 100px;
+      }
+      h3.pos_right{
+        position: relative;
+        left: 100px;
+      }
+    </style>
 </head>
 
 <body>
@@ -31,4 +47,4 @@ h2 태그의 위치는 절대 좌표계(0, 0)를 기준으로 설정
 
 
 
-
+
