--- a/st02.CSS/cs07.포지셔닝/cs07-07.visibility.html
+++ b/st02.CSS/cs07.포지셔닝/cs07-07.visibility.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>visibility 속성</title>
+    <style>
+        img#visibility{
+            visibility: hidden;
+            border: 1px dotted red;}
+        img#display{
+            display: none;}
+    </style>
 </head>
 <body>
     <xmp>
@@ -15,4 +22,4 @@ display: none;       --> 공간이 안 남는다.
     <img src="../images/tomato.jpg" id="display" >
     <img src="../images/tomato.jpg">
 </body>
-</html>
+</html>
