--- a/st02.CSS/cs07.포지셔닝/cs07-09.z-index.html
+++ b/st02.CSS/cs07.포지셔닝/cs07-09.z-index.html
@@ -3,6 +3,30 @@
 <head>
     <meta charset="utf-8">
     <title>z-index 속성</title>
+    <style>
+        div#wrapper{
+            border: 1px solid black;
+            width: 170px;
+            height: 170px;
+            padding: 25px;}
+        div.b1, div.b2, div.b3{
+            border: 1px solid black;
+            width: 100px;
+            height: 100px;}
+        div.b1{
+            background-color: red;}
+        div.b2{
+            background-color: orange;
+            position: relative;
+            left: 60px;
+            top: -80px;
+            z-index: 1;}
+        div.b3{
+            background-color: blue;
+            position: relative;
+            left: 20px;
+            top: -140px;}
+    </style>
 </head>
 <body>
     <div id="wrapper">
@@ -11,4 +35,4 @@
         <div class="b3">3</div>
     </div>
 </body>
-</html>
+</html>
