--- a/st02.CSS/cs07.포지셔닝/cs07-ex01.CSS드랍메뉴.html
+++ b/st02.CSS/cs07.포지셔닝/cs07-ex01.CSS드랍메뉴.html
@@ -4,6 +4,49 @@
 <meta charset="UTF-8">
 <title>자식>자식>자식></title>
 <style>
+    /* common 초기화 */
+    *{margin: 0; padding: 0;}
+    ul, li{list-style-type: none;}
+    a{text-decoration: none;}
+    div{float: left;}
+    li{
+        border: 1px solid black;
+        width: 100px;
+        text-align: center;}
+    /* menu1 */
+    #menu1 {margin: 50px 50px 50px 200px;}
+    #menu1 > li{position: relative; float: left;}
+    #menu1 > li > ul {display: none;}
+
+    #menu1 > li:hover{background-color: black;}
+    #menu1 > li:hover > a{color: white;}
+    #menu1 > li:hover > ul{display: block;}
+    #menu1 > li:hover > ul > li{background-color: white;}
+    #menu1 > li:hover > ul > li:hover{background-color: darkgray;}
+    #menu1 > li:hover > ul > li:hover > a{color: dimgray;}
+    /* menu2 */
+    #menu2 {margin: 50px 50px 50px 200px;}
+    #menu2 > li{position: relative; float: left;}
+    #menu2 > li > ul {display: none;}
+
+    #menu2 > li:hover{background-color: black;}
+    #menu2 > li:hover > a{color: white;}
+    #menu2 > li:hover > ul{display: block;}
+    #menu2 > li:hover > ul > li{background-color: white;}
+    #menu2 > li:hover > ul > li:hover{background-color: darkgray;}
+    #menu2 > li:hover > ul > li:hover > a{color: dimgray;}
+    /* menu3 */
+    #menu3 {margin: 50px 50px 50px 200px;}
+    #menu3 > li{position: relative; float: left;}
+    #menu3 > li > ul {display: none;}
+
+    #menu3 > li:hover{background-color: black;}
+    #menu3 > li:hover > a{color: white;}
+    #menu3 > li:hover > ul{display: block;}
+    #menu3 > li:hover > ul > li{background-color: white;}
+    #menu3 > li:hover > ul > li:hover{background-color: darkgray;}
+    #menu3 > li:hover > ul > li:hover > a{color: dimgray;}
+    
 </style>
 </head>
 <body>
