--- a/st02.CSS/cs08.레이아웃/cs08-21.flex-direction-wrap.html
+++ b/st02.CSS/cs08.레이아웃/cs08-21.flex-direction-wrap.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style>
+        div{
+            border: 1px solid black;
+            width: 1000px;
+            height: 1000px;
+            padding: 10px;
+        }
+        #dir-row div{
+            border: 1px solid black;
+            width: 400px;
+            height: 400px;
+            display: inline-flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+        }
+    </style>
 </head>
 <body>
     <div id="dir-row">
@@ -36,4 +52,4 @@
     </div>
 
 </body>
-</html>
+</html>
