--- a/st02.CSS/cs08.레이아웃/cs08-01.fixed-layout-float.html
+++ b/st02.CSS/cs08.레이아웃/cs08-01.fixed-layout-float.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>고정 레이아웃</title>
+    <style>
+        *{margin: 0px;
+        padding: 0px;}
+        #wrapper{
+            background-color: blue;
+        }
+    </style>
 </head>
 
 <body>
@@ -23,4 +30,4 @@
         </footer>
     </div>
 </body>
-</html>
+</html>
