--- a/st02.CSS/cs08.레이아웃/cs08-21-ex1.html
+++ b/st02.CSS/cs08.레이아웃/cs08-21-ex1.html
@@ -4,6 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <title>Document</title>
+    <style>
+        /* 브라우저 css 초기화 */
+        *{margin: 0; padding: 0;}
+        *{text-align: center; color: white; font-weight: bold;}
+        html, body, #wrap{height: 100%; width: 100%;}
+        #wrap{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;}
+        header{
+            background-color: red;
+            width: 100%;}
+        .header > h1{
+            background-color: red;
+            height: 140px;
+            position: absolute;
+            z-index: 1;}
+        .header > nav{
+            min-height: 80px;}
+        section{
+            width: 100%;
+            height: calc((100% - 160px) / 2);}
+        .slider_section{
+            background-color: darkcyan;
+            width: 50%;}
+        .gallery_section{
+            background-color: yellow;
+            width: 25%;}
+        .rankup_section{
+            background-color: turquoise;
+            width: 25%;}
+        .latest_post_section{
+            background-color: mediumpurple;
+            width: 30%;}
+        .popular_post_section{
+            background-color: coral;
+            width: 30%;}
+        .banner_section{
+            display: flex;
+            flex-direction: column;
+            width: 20%;}
+        .banner_box_01{
+            background-color: blue;
+            width: 100%;
+            height: 50%;}
+        .banner_box_02{
+            background-color: skyblue;
+            width: 100%;
+            height: 50%;}
+        .social_section{
+            background-color: palevioletred;
+            width: 20%;}
+        .footer{
+            background-color: darkred;
+            width: 100%;
+            height: 80px;}
+    </style>
 </head>
 <body>
     <div id="wrap">
@@ -24,4 +81,4 @@
         <footer class="footer">9</footer>
     </div>
 </body>
-</html>
+</html>
