--- a/st02.CSS/cs09.반응형웹/cs09-11.mq.html
+++ b/st02.CSS/cs09.반응형웹/cs09-11.mq.html
@@ -2,7 +2,30 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Media Queries</title>
+    <style>
+		body{
+			background-image: url(../images/bg0.jpg);
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;}
+		@media screen and (max-width: 1024px){
+			body{
+				background-image: url(../images/bg1.jpg);
+			}
+		}
+		@media screen and (max-width: 768px){
+			body{
+				background-image: url(../images/bg2.jpg);
+			}
+		}
+		@media screen and (max-width: 480px){
+			body{
+				background-image: url(../images/bg3.jpg);
+			}
+		}
+	</style>
 </head>
 <body>
 </body>
