--- a/st02.CSS/ex08.cafe/index.html
+++ b/st02.CSS/ex08.cafe/index.html
@@ -31,18 +31,15 @@
         #intro{
             border: 1px solid darkgray;
             width: 50%;
-            height: ;
             padding: 20px;}
         .photo{display: none;}
         #map{
             border: 1px solid darkgray;
             width: 50%;
-            height: ;
             background-color: lightgrey;
             padding: 20px;}
         #choice{
             width: 100%;
-            height: ;
             border: 1px solid darkgray;
             padding: 20px;}
         .sub-titles{color: lightskyblue;}
@@ -54,6 +51,10 @@
             text-align: center;
             color: white;}
         .text{padding: 30px; line-height: 30px;}
+        @media screen and (max-width: 780px){
+            #intro{width: 100%;}
+            #map{width: 100%;}
+        }
     </style>
 </head>
 
